--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            MediaDownloader
+            MediaConverter
         </title>
 
         <link rel="icon" href="assets/images/favicon.png">
